--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Youva.com</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/images/Youva.comLOGO.png">
   <!-- BOOTSTRAP ICONS CDN -->
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"> -->
 </head>
